log
Fri 19 Aug 2022 12:49:44 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:3: error: expected ‘,’ or ‘;’ before ‘return’
   33 |   return l;
      |   ^~~~~~
list.c:32:9: error: unused variable ‘l’ [-Werror=unused-variable]
   32 |   List *l = (List *)malloc(sizeof(List*))
      |         ^
list.c:34:1: error: control reaches end of non-void function [-Werror=return-type]
   34 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d2458ba
Fri 19 Aug 2022 12:49:55 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
32c389a
Sat 20 Aug 2022 07:48:42 PM UTC: 
 list.c | 52 +++++++++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 47 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:1: error: control reaches end of non-void function [-Werror=return-type]
   41 | }
      | ^
list.c: In function ‘popCurrent’:
list.c:117:1: error: control reaches end of non-void function [-Werror=return-type]
  117 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1f08a23
Sat 20 Aug 2022 07:49:08 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:117:1: error: control reaches end of non-void function [-Werror=return-type]
  117 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a410db2
Sat 20 Aug 2022 07:52:40 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:107:8: error: variable or field ‘dato’ declared void
  107 |   void dato = current->data;
      |        ^~~~
list.c:107:15: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
  107 |   void dato = current->data;
      |               ^~~~~~~
list.c:118:10: error: returning ‘int’ from a function with return type ‘void *’ makes pointer from integer without a cast [-Werror=int-conversion]
  118 |   return dato;
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
cbdc466
Sat 20 Aug 2022 07:53:13 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fa9aa47
Sat 20 Aug 2022 07:59:27 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:29: error: expected ‘;’ before ‘return’
   41 |   list->current = list->head
      |                             ^
      |                             ;
   42 |   return dato;
      |   ~~~~~~                     
list.c:40:9: error: unused variable ‘dato’ [-Werror=unused-variable]
   40 |   void *dato = list->head->data;
      |         ^~~~
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
   43 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
d378271
Sat 20 Aug 2022 07:59:40 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:10: error: dereferencing ‘void *’ pointer [-Werror]
   42 |   return *dato;
      |          ^~~~~
list.c:42:10: error: void value not ignored as it ought to be
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
   43 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
cea705f
Sat 20 Aug 2022 08:00:05 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
466b729
Sat 20 Aug 2022 08:02:11 PM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  0|0
ed6c137
Sat 20 Aug 2022 08:02:51 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
9b9fb84
Sat 20 Aug 2022 08:03:05 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
e7c370f
Sat 20 Aug 2022 08:03:26 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8c12a3f
Sat 20 Aug 2022 08:07:53 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
ab40aa3
Sat 20 Aug 2022 08:13:45 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
ba92507
Sat 20 Aug 2022 08:17:03 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
ec2f1c6
